# renderer

./: .gitmodules  CMakeLists.txt  readme.md  todo.md
app/: CMakeLists.txt  SimplexNoise.cpp  SimplexNoise.h  logging.h  main.cpp  main_test.cpp
app/sandbox/: CMakeLists.txt  runners.h
app/sandbox/breakout/: CMakeLists.txt  main.cpp
app/sandbox/breakout/src/: Breakout.hpp  BreakoutRunner.hpp  breakout_runner.hpp
app/sandbox/breakout/src/components/: Ball.cpp  Block.cpp  Player.cpp  Position.cpp  Position.h  Sprite.cpp  Sprite.h  ball.cpp  ball.h  block.cpp  block.h  player.cpp  player.h  sprite.cpp  sprite.h
app/sandbox/breakout/src/systems/: CollisionSystem.cpp  MoveSystem.cpp  MoveSystem.h  RenderSystem.cpp  RenderSystem.h  collision_system.cpp  collision_system.h  move_system.cpp  move_system.h  render_system.cpp  render_system.h
app/sandbox/camera/: CMakeLists.txt  main.cpp
app/sandbox/camera/src/: CameraRunner.hpp
app/sandbox/camera_runner/: CMakeLists.txt  main.cpp
app/sandbox/camera_runner/src/: CameraRunner.hpp  camera_controller.hpp
app/sandbox/pong/: CMakeLists.txt  main.cpp
app/sandbox/pong/src/: Pong.hpp  PongRunner.hpp  main.cpp  pong_runner.hpp  random.hpp
app/sandbox/pong/src/components/: AI.cpp  AI.h  All.h  Ball.cpp  Player.cpp  Position.cpp  Position.h  Sprite.cpp  ai.cpp  ai.h  all.h  ball.cpp  ball.h  player.cpp  player.h  sprite.cpp  sprite.h
app/sandbox/pong/src/core/: Game.cpp  Game.h
app/sandbox/pong/src/events/: KeyDown.h  KeyUp.h
app/sandbox/pong/src/systems/: AISystem.cpp  CollisionSystem.cpp  CollisionSystem.h  MoveSystem.cpp  MoveSystem.h  RenderSystem.cpp  RenderSystem.h  ai_system.cpp  ai_system.h  collision_system.cpp  collision_system.h  move_system.cpp  move_system.h  render_system.cpp  render_system.h
app/sandbox/template/: CMakeLists.txt  main.cpp
app/sandbox/template/src/: TemplateRunner.hpp
app/sandbox/text/: CMakeLists.txt  main.cpp
app/sandbox/text/src/: TextRunner.hpp
app/sandbox/text_runner/: CMakeLists.txt  main.cpp
app/sandbox/text_runner/src/: TextRunner.hpp
app/sandbox/textured_cube/: CMakeLists.txt  main.cpp
app/sandbox/textured_cube/src/: textured_cube.hpp
app/sandbox/ui_demo/: CMakeLists.txt  main.cpp
app/sandbox/ui_demo/src/: demo_ui_controller.h  ui_demo.h  ui_demo_elements.h
app/utils/: glfw.cpp  glfw.h
src/Camera/: CMakeLists.txt
src/Camera/include/: Camera.h
src/Camera/src/: Camera.cpp
src/Camera/test/: CMakeLists.txt
src/Camera/test/src/: OrthographicCameraTests.cpp
src/Core/: CMakeLists.txt
src/Core/include/: Core.h
src/Core/include/Core/: Camera2D.h  CameraController.h  Config.h  File.h  Font.h  Game.h  Runner.h  Texture.h
src/Core/include/Core/components/: Position3D.h
src/Core/include/Core/input/: InputEvents.h
src/Core/src/: Camera2D.cpp  Config.h  File.cpp  Font.cpp  Game.cpp  Runner.cpp  Texture.cpp
src/Core/src/components/: Position2D.cpp  Position3D.cpp
src/GL/: CMakeLists.txt  gl.cpp
src/GL/include/: gl.h
src/Shader/: CMakeLists.txt
src/Shader/include/: Shader.h
src/Shader/include/Shader/: Shader.h  Texture.h  Uniform.h  Vao.h  Vbo.h  VertexAttribute.h
src/Shader/src/: Shader.cpp  ShaderLoader.h  Texture.cpp  Uniform.cpp  Vao.cpp  Vbo.cpp  VertexAttribute.cpp
src/Shader/test/: CMakeLists.txt
src/Shader/test/src/: ShaderLoaderTest.cpp  ShaderTestFixture.cpp  ShaderTestFixture.h  VaoTest.cpp  VboTest.cpp  VertexAttributeTest.cpp  main.cpp
src/Text/: CMakeLists.txt
src/Text/include/: Text.h
src/Text/include/Text/: Flags.h  Font.h  Text.h
src/Text/include/Text/internal/: TextMeshGenerator.h  gl.hpp
src/Text/src/: Flags.cpp  Font.cpp  Text.cpp  TextMeshGenerator.cpp
src/Text/test/: CMakeLists.txt
src/Text/test/src/: FontLoaderTest.cpp  TextMeshTests.cpp  TextStructureTests.cpp  TextTest.cpp  TextTestFixture.h  main.cpp
src/Text/test/src/utils/: glfw.cpp  glfw.h  glfw.hpp
src/core/: CMakeLists.txt
src/core/include/: core.h
src/core/include/core/: camera.h  colors.h  config.h  controller.h  events.h  file.h  fwd.h  glfw.h  input.h  math.h  memory.h  patterns.h  runner.h  runner_context.h  ui.h  update_context.h  window.h
src/core/include/core/camera/: camera.h  camera_controller.h
src/core/include/core/components/: position2d.h  position3d.h
src/core/include/core/memory/: element_buffer.h  memory_allocator.h  memory_zone.h  strategies.h
src/core/include/core/patterns/: strategy.h
src/core/include/core/ui/: fwd.h  label.h  text_element.h  text_element_builder.h  ui_controller.h  ui_element.h  ui_element_builder.h  ui_element_mesh_generator.h  ui_fonts.h  ui_shader.h
src/core/src/: controller.cpp  file.cpp  glfw.cpp  input.cpp  intput.cpp  runner.cpp  window.cpp
src/core/src/camera/: camera.cpp  camera_controller.cpp
src/core/src/components/: position2d.cpp  position3d.cpp
src/core/src/ui/: label.cpp  text_element.cpp  ui_controller.cpp  ui_element.cpp  ui_fonts.cpp
src/core/test/: CMakeLists.txt
src/core/test/src/: controller_test.cpp  input_test.cpp  math_test.cpp  memory_test.cpp  ui_test.cpp  window.cpp
src/core/test/src/ui/: text_element_test.cpp  ui_element_mesh_generator_test.cpp  ui_element_test.cpp
src/shader/: CMakeLists.txt
src/shader/include/: shader.h
src/shader/include/shader/: fwd.h  shader.h  texture.h  uniform.h  vao.h  vbo.h  vertex_attribute.h
src/shader/src/: shader.cpp  shader_loader.h  texture.cpp  uniform.cpp  vao.cpp  vbo.cpp  vertex_attribute.cpp
src/shader/test/: CMakeLists.txt
src/shader/test/src/: main.cpp  shader_loader_test.cpp  shader_test_fixture.cpp  shader_test_fixture.h  vao_test.cpp  vbo_test.cpp  vertex_attribute_test.cpp
src/text/: CMakeLists.txt
src/text/include/: text.h
src/text/include/text/: font.h  fwd.h  generator.h  text.h  text_builder.h
src/text/src/: font.cpp  generator.cpp  generator.h  text.cpp
src/text/test/: CMakeLists.txt
src/text/test/src/: font_loader_test.cpp  text_buffer_packing.cpp  text_builder_test.cpp  text_mesh_test.cpp  text_structure_tests.cpp  text_test.cpp  text_test_fixture.cpp  text_test_fixture.h
(+31 files in other folders)
